✨ feat: more servers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   bedrockconnect:
+    container_name: bedrock_connect
     image: strausmann/minecraft-bedrock-connect
     restart: always
     environment:
@@ -11,19 +12,60 @@ services:
     volumes:
       - "./bedrockconnect:/config:Z"
 
-  minecraft:
+  vanilla:
+    container_name: minecraft_vanilla
     image: itzg/minecraft-server
+    depends_on:
+      - bedrockconnect
     tty: true
     stdin_open: true
     restart: unless-stopped
-    ports:
-      - "25565:25565"
-      - "19133:19132/udp"
     environment:
       EULA: "TRUE"
       TYPE: "PAPER"
+      MOTD: "Vanilla Juice"
+      DIFFICULTY: "normal"
       PLUGINS: |
         https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
         https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
+    ports:
+      - "19133:19132/udp"
     volumes:
-      - "./minecraft:/data:Z"
+      - "./minecraft/vanilla:/data:Z"
+
+  disneyland:
+    container_name: minecraft_disneyland
+    image: itzg/minecraft-server
+    depends_on:
+      - bedrockconnect
+    tty: true
+    stdin_open: true
+    restart: unless-stopped
+    environment:
+      EULA: "TRUE"
+      TYPE: "PAPER"
+      MOTD: "Disneyland"
+      DIFFICULTY: "normal"
+      MODE: "creative"
+      SPIGET_RESOURCES: "114160"
+      PLUGINS: |
+        https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot
+        https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
+    ports:
+      - "19134:19132/udp"
+    volumes:
+      - "./minecraft/disneyland:/data:Z"
+
+  router:
+    container_name: minecraft_router
+    image: itzg/mc-router
+    depends_on:
+      - vanilla
+      - disneyland
+    restart: unless-stopped
+    environment:
+      MAPPING: |
+        vanilla.minecraft.lan=vanilla:25565
+        disneyland.minecraft.lan=disneyland:25565
+    ports:
+      - "25565:25565"
