--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 services:
   bedrockconnect:
     container_name: bedrock_connect
-    image: strausmann/minecraft-bedrock-connect
-    restart: always
-    environment:
-      NODB: "true"
-      CUSTOM_SERVERS: "/config/servers.json"
-      SERVER_LIMIT: 25
+    build:
+      context: bedrockconnect
+    restart: unless-stopped
     ports:
       - "19132:19132/udp"
-    volumes:
-      - "./bedrockconnect:/config:Z"
 
   router:
     container_name: minecraft_router
@@ -25,88 +20,3 @@ services:
         winter.minecraft.lan=winter:25565
     ports:
       - "25565:25565"
-
-  vanilla:
-    container_name: minecraft_vanilla
-    build:
-      context: ./minecraft
-    depends_on:
-      - bedrockconnect
-      - router
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    environment:
-      MOTD: "Vanilla Juice"
-    ports:
-      - "19133:19132/udp"
-    volumes:
-      - "./minecraft/worlds/vanilla:/data:Z"
-
-  hogwarts:
-    container_name: minecraft_hogwarts
-    build:
-      context: ./minecraft
-    depends_on:
-      - bedrockconnect
-      - router
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    environment:
-      MOTD: "Hogwarts Castle"
-    ports:
-      - "19134:19132/udp"
-    volumes:
-      - "./minecraft/worlds/hogwarts:/data:Z"
-
-  minecity:
-    container_name: minecraft_minecity
-    build:
-      context: ./minecraft
-    depends_on:
-      - bedrockconnect
-      - router
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    environment:
-      MOTD: "Minecity"
-    ports:
-      - "19135:19132/udp"
-    volumes:
-      - "./minecraft/worlds/minecity:/data:Z"
-
-  unknown_host:
-    container_name: minecraft_unknown_host
-    build:
-      context: ./minecraft
-    depends_on:
-      - bedrockconnect
-      - router
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    environment:
-      MOTD: "Unknown Host"
-    ports:
-      - "19136:19132/udp"
-    volumes:
-      - "./minecraft/worlds/unknown_host:/data:Z"
-
-  winter:
-    container_name: minecraft_winter
-    build:
-      context: ./minecraft
-    depends_on:
-      - bedrockconnect
-      - router
-    tty: true
-    stdin_open: true
-    restart: unless-stopped
-    environment:
-      MOTD: "Winter Puzzleland"
-    ports:
-      - "19137:19132/udp"
-    volumes:
-      - "./minecraft/worlds/winter:/data:Z"
