✨ feat: manually downloaded plugins

--- a/minecraft/Dockerfile
+++ b/minecraft/Dockerfile
@@ -1,4 +1,4 @@
-FROM itzg/minecraft-server
+FROM itzg/minecraft-server:stable as vanilla
 
 ENV TYPE=PAPER \
     EULA=TRUE \
@@ -7,3 +7,5 @@ ENV TYPE=PAPER \
 RUN mkdir -p /plugins
 RUN wget -O /plugins/geyser.jar https://download.geysermc.org/v2/projects/geyser/versions/latest/builds/latest/downloads/spigot && \
     wget -O /plugins/floodgate.jar https://download.geysermc.org/v2/projects/floodgate/versions/latest/builds/latest/downloads/spigot
+
+COPY plugins/*.jar /plugins/
