--- a/bedrockconnect/Dockerfile
+++ b/bedrockconnect/Dockerfile
@@ -2,6 +2,8 @@ FROM strausmann/minecraft-bedrock-connect
 
 ENV NODB=true \
     CUSTOM_SERVERS=/config/servers.json \
-    SERVER_LIMIT=25
+    SERVER_LIMIT=25 \
+    USER_SERVERS=false \
+    FEATURED_SERVERS=false
 
 COPY servers.json /config
